lines containing the strings CRITICAL, WARNING, or ERROR (not "failed"
or "error" anymore).

+ Added a suite startup event hook.

+ Replaced original simulation mode, which submitted real dummy tasks to
run locally after nobbling the task job script, with: (1) a proper
simulation mode that submits not real dummy tasks, and (2) a dummy mode
that simply dummies out command scripting but leaves job submission,
hosting, etc. intact.

+ Added a simple means of creating self-diagnosing cylc test suites:
running a suite in any run mode with '--reference-log' creates a special
reference suite log in the suite definition directory containing
task triggering information. Later, running with '--reference-test'
automatically switches on "abort if any task fails", "abort if suite
times out" (configured in [cylc][[reference test]]), and runs "cylc hook
check-triggering" on the shutdown hook with "abort if shutdown event
handler fails" switched on. The event handler compares triggering
behaviour in the test run with that of the reference run, and aborts the
test with non-zero exit status if any differences, disregarding timing
and order, are detected (i.e. tasks triggering off different upstream
tasks or running in different cycles).
The intention is to create a battery of automatic tests to make it
harder to break cylc in the future; and to make it easy for users with
complex suites to quickly verify, in dummy mode, that changes to cylc
will not break their suites. 

+ Suite definitions can now be reparsed at run time with the new "cylc
reload" command, even in tasks have been removed or added (in the later
case a specific instance of an added task will still have to be inserted
manually after the reload operation). This allows task settings
(environment variables etc.) to be changed without restarting the suite.

+ Higher-level family triggers (families of families) can now be used in
the graph.
